--- a/templates/JiraDataCenter.template.yaml
+++ b/templates/JiraDataCenter.template.yaml
@@ -1094,6 +1094,7 @@ Resources:
                   collectd-generic-jmx: []
                   collectd-rrdtool: []
                   collectd-disk: []
+                - !Ref "AWS::NoValue"
           files:
             /etc/atl:
               content:
