Add policies to atlassian-aws-deployment templates - ITOPS-1577

--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -1162,6 +1162,12 @@ Resources:
               - Action: ['iam:ListRolePolicies', 'iam:GetRolePolicy']
                 Effect: Allow
                 Resource: !Sub 'arn:aws:iam::${AWS::AccountId}:role/${AWS::StackName}-JiraClusterNodeRole*'
+              - Action: ['rds:ModifyDBInstance']
+                Effect: Allow
+                Resource: ['arn:aws:rds:*:*:db:*']
+              - Action: ['iam:PassRole']
+                Effect: Allow
+                Resource: ['*']
   ConfluenceClusterNodeInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
