--- a/templates/ConfluenceServerClone.template.yaml
+++ b/templates/ConfluenceServerClone.template.yaml
@@ -975,6 +975,12 @@ Resources:
               - Action: ['iam:ListRolePolicies', 'iam:GetRolePolicy']
                 Effect: Allow
                 Resource: !Sub 'arn:aws:iam::${AWS::AccountId}:role/${AWS::StackName}-JiraClusterNodeRole*'
+              - Action: ['rds:ModifyDBInstance']
+                Effect: Allow
+                Resource: ['arn:aws:rds:*:*:db:*']
+              - Action: ['iam:PassRole']
+                Effect: Allow
+                Resource: ['*']
   ConfluenceServerInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
