--- a/templates/CrowdDataCenter.template.yaml
+++ b/templates/CrowdDataCenter.template.yaml
@@ -1022,6 +1022,12 @@ Resources:
               - Action: ['iam:ListRolePolicies', 'iam:GetRolePolicy']
                 Effect: Allow
                 Resource: !Sub 'arn:aws:iam::${AWS::AccountId}:role/${AWS::StackName}-JiraClusterNodeRole*'
+              - Action: ['rds:ModifyDBInstance']
+                Effect: Allow
+                Resource: ['arn:aws:rds:*:*:db:*']
+              - Action: ['iam:PassRole']
+                Effect: Allow
+                Resource: ['*']
   CrowdClusterNodeInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
