DCD-303: fix ViewerProtocolPolicy

--- a/templates/cdn/AtlassianCDNInternal.template.yaml
+++ b/templates/cdn/AtlassianCDNInternal.template.yaml
@@ -122,7 +122,7 @@ Resources:
               - Accept
             QueryString: true
           TargetOriginId: !Sub ['${domainName}-origin-id', {domainName: !Select ['1', !Split ["://", !Ref ServiceUrl]]}]
-          ViewerProtocolPolicy: allow-all
+          ViewerProtocolPolicy: redirect-to-https
         Enabled: true
         HttpVersion: http2
         IPV6Enabled: true
@@ -130,7 +130,7 @@ Resources:
           - Id: !Sub ['${domainName}-origin-id', {domainName: !Select ['1', !Split ["://", !Ref ServiceUrl]]}]
             DomainName: !Select ['1', !Split ["://", !Ref ServiceUrl]]
             CustomOriginConfig:
-              OriginProtocolPolicy: match-viewer
+              OriginProtocolPolicy: !If [UseHTTP, 'http-only', 'https-only']
       Tags:
         - Key: Name
           Value: !Sub '${AWS::StackName} CloudFront'
