--- a/templates/cdn/AtlassianCDN.template.yaml
+++ b/templates/cdn/AtlassianCDN.template.yaml
@@ -22,7 +22,7 @@ Resources:
               - Accept
             QueryString: true
           TargetOriginId: !Sub ['${domainName}-origin-id', {domainName: !Select ['1', !Split ["://", !Ref ServiceUrl]]}]
-          ViewerProtocolPolicy: 
+          ViewerProtocolPolicy: redirect-to-https
         Enabled: true
         HttpVersion: http2
         IPV6Enabled: true
