ITOPS-1624 add test for LocalAnsibleGitRepo before bootstrapping local-ansible

--- a/quickstarts/quickstart-forge-for-atlassian-services.yaml
+++ b/quickstarts/quickstart-forge-for-atlassian-services.yaml
@@ -505,7 +505,7 @@ Resources:
               command: ./setup_forge.sh >> /var/log/forge.log 2>&1
             020_bootstrap_local_ansible:
               command: /tmp/bootstrap_local_ansible > /var/log/bootstrap_local_ansible.log 2>&1
-              ignoreErrors: true
+              test: !Sub test -n "${LocalAnsibleGitRepo}"
             025_ansible_first_run:
               command: /usr/local/bin/local-ansible-run
               ignoreErrors: true
