--- a/quickstarts/quickstart-crowd-master.template.yaml
+++ b/quickstarts/quickstart-crowd-master.template.yaml
@@ -1097,6 +1097,7 @@ Resources:
               ignoreErrors: true
             090_bootstrap_local_ansible:
               command: /tmp/bootstrap_local_ansible > /var/log/bootstrap_local_ansible.log 2>&1
+              test: !Sub test -n "${LocalAnsibleGitRepo}"
           services:
             sysvinit:
               cfn-hup:
