ITOPS-1624 add test to check for local-ansible-run before executing

--- a/quickstarts/quickstart-forge-for-atlassian-services.yaml
+++ b/quickstarts/quickstart-forge-for-atlassian-services.yaml
@@ -508,7 +508,7 @@ Resources:
               test: !Sub test -n "${LocalAnsibleGitRepo}"
             025_ansible_first_run:
               command: /usr/local/bin/local-ansible-run
-              ignoreErrors: true
+              test: test -x /usr/local/bin/local-ansible-run
             030_run_forge:
               command:
                 start forge
