DCD-303: Add https protocol to CDN domain output (required by application plugin)

--- a/templates/cdn/AtlassianCDN.template.yaml
+++ b/templates/cdn/AtlassianCDN.template.yaml
@@ -48,4 +48,6 @@ Resources:
 Outputs:
   CDNDomainName:
     Description: This is the domain name for the Atlassian CDN
-    Value: !GetAtt 'CloudFrontCDN.DomainName'
+    Value: !Sub
+      - "https://${CloudFrontDomainName}"
+      - CloudFrontDomainName: !GetAtt CloudFrontCDN.DomainName
