--- a/templates/cdn/AtlassianCDNInternal.template.yaml
+++ b/templates/cdn/AtlassianCDNInternal.template.yaml
@@ -173,7 +173,9 @@ Resources:
 Outputs:
   CDNDomainName:
     Description: This is the domain name for the Atlassian CDN
-    Value: !GetAtt 'CloudFrontCDN.DomainName'
+    Value: !Sub
+      - "https://${CloudFrontDomainName}"
+      - CloudFrontDomainName: !GetAtt CloudFrontCDN.DomainName
   LoadBalancerURL:
     Description: URL of the newly created ALB
     Value: !GetAtt 'LoadBalancer.DNSName'
