ITOPS-1666 make NFS EBS volume Name consistent across products

--- a/templates/CrowdDataCenterClone.template.yaml
+++ b/templates/CrowdDataCenterClone.template.yaml
@@ -1242,7 +1242,7 @@ Resources:
       SnapshotId: !Ref EBSSnapshotId
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName} Crowd DR volume"
+          Value: !Sub "${AWS::StackName} Crowd DR shared-home volume"
         - Key: Cluster
           Value: !Ref AWS::StackName
         - Key: Application
