--- a/templates/JiraDataCenterClone.template.yaml
+++ b/templates/JiraDataCenterClone.template.yaml
@@ -1267,7 +1267,7 @@ Resources:
       SnapshotId: !Ref EBSSnapshotId
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName} Jira DR volume"
+          Value: !Sub "${AWS::StackName} Jira DR shared-home volume"
         - Key: Cluster
           Value: !Ref AWS::StackName
         - Key: Application
